texinfo: update to 7.2

--- a/mingw-w64-texinfo/PKGBUILD
+++ b/mingw-w64-texinfo/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=texinfo
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=7.1.1
-pkgrel=2
+pkgver=7.2
+pkgrel=1
 pkgdesc="GNU documentation system for on-line information and printed output (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
@@ -25,29 +25,19 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-gettext-tools"
 )
 source=("https://ftp.gnu.org/pub/gnu/${_realname}/${_realname}-${pkgver}.tar.xz"{,.sig}
-        "0001-info-terminal.c-terminal_prep_terminal_hook-Return-v.patch"
         "texinfo-install.hook.in"
         "texinfo-remove.hook.in")
-sha256sums=('31ae37e46283529432b61bee1ce01ed0090d599e606fc6a29dca1f77c76a6c82'
+sha256sums=('0329d7788fbef113fa82cb80889ca197a344ce0df7646fe000974c5d714363a6'
             'SKIP'
-            '3b622842e37b24a0307ff196e094c6b4b026667a995f6bfe55da284cf309c105'
             'd367fe9dfa09385408cd2e2240f95738258d727449cb3b29e685925210c2a1d9'
             'ef6e404ee6a45f18957e413d2d83a7699a486bebfde28eb8d515a5f14736d948')
 validpgpkeys=('EAF669B31E31E1DECBD11513DDBC579DAB37FBA9') # Gavin Smith (Texinfo maintainer) <GavinSmith0123@gmail.com>
-
-prepare() {
-  cd "${_realname}-${pkgver}"
-  patch -p1 -i "${srcdir}/0001-info-terminal.c-terminal_prep_terminal_hook-Return-v.patch"
-}
 
 build() {
   mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
 
   ../"${_realname}-${pkgver}"/configure \
-    --prefix="${MINGW_PREFIX}" \
-    --build="${MINGW_CHOST}" \
-    --host="${MINGW_CHOST}" \
-    --target="${MINGW_CHOST}"
+    --prefix="${MINGW_PREFIX}"
 
   make
 }
@@ -65,5 +55,6 @@ package() {
     install -Dt "$pkgdir/usr/share/libalpm/hooks" -m644 "${hook_path}"
   done
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/COPYING \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 }
