doxygen: update to 1.13.0

--- a/mingw-w64-doxygen/PKGBUILD
+++ b/mingw-w64-doxygen/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=doxygen
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.12.0
-pkgrel=3
+pkgver=1.13.0
+pkgrel=1
 pkgdesc="A documentation system for C++, C, Java, IDL and PHP (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,7 +16,7 @@ msys2_references=(
 )
 license=('spdx:GPL-2.0-only')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-clang-libs"
+         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-clang-libs")
          "${MINGW_PACKAGE_PREFIX}-libiconv"
          "${MINGW_PACKAGE_PREFIX}-sqlite3"
          "${MINGW_PACKAGE_PREFIX}-spdlog"
@@ -25,19 +25,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
-             "${MINGW_PACKAGE_PREFIX}-clang-tools-extra"
              "${MINGW_PACKAGE_PREFIX}-python"
-             $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-qt6-base"))
+             $([[ ${CARCH} == i686 ]] || echo \
+               "${MINGW_PACKAGE_PREFIX}-clang-tools-extra" \
+               "${MINGW_PACKAGE_PREFIX}-qt6-base"))
 if [[ ${CARCH} != i686 ]]; then
   optdepends=("${MINGW_PACKAGE_PREFIX}-qt6-base: for doxywizard")
 fi
-source=(https://github.com/doxygen/doxygen/archive/Release_${pkgver//./_}/${_realname}-${pkgver}.tar.gz
+source=(https://www.doxygen.nl/files/${_realname}-${pkgver}.src.tar.gz
         cmake-mingw.patch
-        https://github.com/doxygen/doxygen/commit/cff64a87dea7596fd506a85521d4df4616dc845f.patch
         0002-clang-19-fix.patch)
-sha256sums=('5ca35e1258020df5fe8b21c3656aed156c317def4a81b7fe52f452edc9f35768'
+sha256sums=('99434f8130f68be4a4a817e540620aedf95c617c68cc73434de04207abaaae46'
             '2b86315039128992f750e3f9793cb4a769e1ff62e77a00ae391d83810bc6f920'
-            '031022927c7b43c90c53971e6c7e7a807e7f3c860e2d5b8c4d158d06cc8445ce'
             '8bd57267943b74e1bc4cae2c87da0255d747b6a2d35276fbfeb45f817947e991')
 
 apply_patch_with_msg() {
@@ -49,7 +48,7 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd "${srcdir}/${_realname}-Release_${pkgver//./_}"
+  cd "${srcdir}/${_realname}-${pkgver}"
 
   apply_patch_with_msg \
     cmake-mingw.patch
@@ -57,7 +56,6 @@ prepare() {
   # llvm 19 fixes
   # https://github.com/doxygen/doxygen/issues/10928
   apply_patch_with_msg \
-    cff64a87dea7596fd506a85521d4df4616dc845f.patch \
     0002-clang-19-fix.patch
 }
 
@@ -72,7 +70,7 @@ build() {
   fi
 
   if [[ ${CARCH} != i686 ]]; then
-    _extra_config+=("-Dbuild_wizard=ON")
+    _extra_config+=("-Dbuild_wizard=ON" "-Duse_libclang=ON")
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
@@ -85,10 +83,9 @@ build() {
     -Dbuild_parse=ON \
     -Dbuild_search=ON \
     -Duse_sys_spdlog=ON \
-    -Duse_libclang=ON \
     -Duse_sys_sqlite3=ON \
     -DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python \
-    ../${_realname}-Release_${pkgver//./_}
+    ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
 }
@@ -97,5 +94,6 @@ package() {
   cd "${srcdir}"/build-${MSYSTEM}
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -Dm644 "${srcdir}"/${_realname}-Release_${pkgver//./_}/LICENSE "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
