llama.cpp: some fixes
- Use mingw-w64-python
- shaderc is a buildtime dependency
- libraries are linked to openblas not to openblas64
- disable building tests and examples.
- Fix openmp package name and add it to `depends()` instead of `makedepends()`
- download the archive instead of fetching git tag.
- disable warnings.

--- a/mingw-w64-llama.cpp/PKGBUILD
+++ b/mingw-w64-llama.cpp/PKGBUILD
@@ -1,9 +1,10 @@
+
+
 _realname=llama.cpp
-_realver=b4394
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 epoch=1
-pkgver=b4394.r0.g16cdce7
+pkgver=b4394
 pkgrel=1
 pkgdesc="Library and tools for running inference with Meta's LLaMA model (and derivatives) in C/C++ (mingw-w64)"
 arch=('any')
@@ -12,34 +13,23 @@ url="https://github.com/ggerganov/llama.cpp"
 license=('spdx:MIT')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-gcc-libs"
-  "${MINGW_PACKAGE_PREFIX}-openblas64"
-  "${MINGW_PACKAGE_PREFIX}-vulkan-loader"
-  "${MINGW_PACKAGE_PREFIX}-shaderc"
+  "${MINGW_PACKAGE_PREFIX}-omp"
   "${MINGW_PACKAGE_PREFIX}-opencl-icd"
+  "${MINGW_PACKAGE_PREFIX}-openblas"
   "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-numpy"
+  "${MINGW_PACKAGE_PREFIX}-vulkan-loader"
 )
 makedepends=(
+  "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-cmake"
   "${MINGW_PACKAGE_PREFIX}-ninja"
-  "${MINGW_PACKAGE_PREFIX}-cc"
-  "${MINGW_PACKAGE_PREFIX}-openmp"
-  "${MINGW_PACKAGE_PREFIX}-vulkan-headers"
   "${MINGW_PACKAGE_PREFIX}-opencl-headers"
-  "git"
+  "${MINGW_PACKAGE_PREFIX}-shaderc"
+  "${MINGW_PACKAGE_PREFIX}-vulkan-headers"
 )
-source=("${_realname}"::"git+https://github.com/ggerganov/llama.cpp.git#tag=${_realver}")
-sha256sums=('64d706b84ad9a8cb4529566f816d000f0ed66d81f98b7af7d31d8e5c7284335c')
-
-pkgver() {
-  cd "${srcdir}/${_realname}"
-
-  git describe --long --tags --abbrev=7 | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
-
-prepare() {
-  cd "${srcdir}/${_realname}"
-}
+source=("https://github.com/ggerganov/llama.cpp/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('da7b0b0b6cc9a2c1e7a88da2177ab650462cce32ad4d2a23d6ddd0dda72e5a33')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -57,6 +47,9 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
       -DBUILD_SHARED_LIBS=ON \
+      -DLLAMA_ALL_WARNINGS=OFF \
+      -DLLAMA_BUILD_TESTS=OFF \
+      -DLLAMA_BUILD_EXAMPLES=OFF \
       -DGGML_RPC=ON \
       -DGGML_BLAS=ON \
       -DGGML_BLAS_VENDOR=OpenBLAS \
@@ -65,7 +58,8 @@ build() {
       -DGGML_OPENCL_USE_ADRENO_KERNELS=OFF \
       -DGGML_NATIVE=OFF \
       -DGGML_CCACHE=OFF \
-      ../${_realname}
+      -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python \
+      ../${_realname}-${pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
 }
@@ -89,5 +83,6 @@ package() {
 
   cd -
 
-  install -Dm644 "${srcdir}/${_realname}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
