python-numba: update to 0.61.0rc2

--- a/mingw-w64-python-numba/PKGBUILD
+++ b/mingw-w64-python-numba/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=numba
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.60.0
-pkgrel=6
+pkgver=0.61.0rc2
+pkgrel=1
 pkgdesc='NumPy aware dynamic Python compiler using LLVM (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -28,30 +28,27 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-scipy")
 options=('!emptydirs' '!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
-        "001-fix-build-with-numpy-2.0.1.patch")
-sha256sums=('5df6158e5584eece5fc83294b949fd30b9f1125df7708862205217e068aabf16'
-            'a0aef12c07a204935c49f316d8da0a0f3b70325840d6a8b244888a96f65b52ff')
+        "5e917b96ae7033e994f185cb37329a07e56d51b6.patch")
+sha256sums=('630b8ff1ddd567b488cb09c439cebcf750b95f960562f43e234c94a334fee14b'
+            'bad9d6aca6d1330c5bd02b570a8d923b99738f15beb95f600185445901b0d274')
 
 prepare() {
-  cd ${_realname}-${pkgver}
-  # https://github.com/numpy/numpy/issues/27083
-  patch -p1 -i "${srcdir}"/001-fix-build-with-numpy-2.0.1.patch
+  cd "${_realname}-${pkgver}"
 
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
+  # drop pinning numpy version from https://github.com/numba/numba/commit/5e917b96ae7033e994f185cb37329a07e56d51b6
+  patch -R -p1 -i ../5e917b96ae7033e994f185cb37329a07e56d51b6.patch
 }
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  NUMBA_DISABLE_TBB=1 \
-    ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+
+  NUMBA_DISABLE_TBB=1 python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "python-build-${MSYSTEM}"
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
