--- a/mingw-w64-llama.cpp/PKGBUILD
+++ b/mingw-w64-llama.cpp/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 epoch=1
 pkgver=b4394
-pkgrel=1
+pkgrel=2
 pkgdesc="Library and tools for running inference with Meta's LLaMA model (and derivatives) in C/C++ (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64' 'mingw64')
@@ -47,9 +47,9 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
       -DBUILD_SHARED_LIBS=ON \
+      -DLLAMA_BUILD_EXAMPLES=ON \
       -DLLAMA_ALL_WARNINGS=OFF \
       -DLLAMA_BUILD_TESTS=OFF \
-      -DLLAMA_BUILD_EXAMPLES=OFF \
       -DGGML_RPC=ON \
       -DGGML_BLAS=ON \
       -DGGML_BLAS_VENDOR=OpenBLAS \
@@ -70,18 +70,12 @@ package() {
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
 
   # Rename output files by prefixing them with llama (if not already prefixed and if not DLL)
-  cd "${pkgdir}${MINGW_PREFIX}"
-  for i in bin/*.{exe,py,dll}; do    
+  for i in "${pkgdir}"${MINGW_PREFIX}/bin/*.{exe,py,dll}; do
     filename=$(basename "$i")
-    
     if [[ ! ("$filename" =~ ^llama || "$filename" =~ \.dll$) ]]; then
       mv "${i}" "${pkgdir}${MINGW_PREFIX}/bin/llama-${filename}"
-    else
-      mv "${i}" "${pkgdir}${MINGW_PREFIX}/bin/${filename}"
     fi
   done
-
-  cd -
 
   install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
     "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
