raylib: depend on glfw for shared library

--- a/mingw-w64-raylib/PKGBUILD
+++ b/mingw-w64-raylib/PKGBUILD
@@ -50,6 +50,7 @@ build() {
     "${extra_config[@]}" \
     -DBUILD_EXAMPLES=OFF \
     -DBUILD_SHARED_LIBS=ON \
+    -DUSE_EXTERNAL_GLFW=ON \
     -B "build-${MSYSTEM}-shared" \
     -S "${_realname}-${pkgver}"
 
