gtk4: disable media-gstreamer on i686

--- a/mingw-w64-gtk4/PKGBUILD
+++ b/mingw-w64-gtk4/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=gtk4
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-${_realname}-media-gstreamer")
+         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-${_realname}-media-gstreamer"))
 pkgver=4.16.12
-pkgrel=1
+pkgrel=2
 pkgdesc="GObject-based multi-platform GUI toolkit (v4) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,10 +22,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-sassc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-python-docutils"
-             "${MINGW_PACKAGE_PREFIX}-vulkan-headers"
-             "${MINGW_PACKAGE_PREFIX}-shaderc"
              "${MINGW_PACKAGE_PREFIX}-gi-docgen"
-             "${MINGW_PACKAGE_PREFIX}-gst-plugins-bad-libs")
+             $([[ ${CARCH} == i686 ]] || echo \
+               "${MINGW_PACKAGE_PREFIX}-gst-plugins-bad-libs" \
+               "${MINGW_PACKAGE_PREFIX}-vulkan-headers" \
+               "${MINGW_PACKAGE_PREFIX}-shaderc"))
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-adwaita-icon-theme"
          "${MINGW_PACKAGE_PREFIX}-cairo"
@@ -35,7 +36,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-json-glib"
          "${MINGW_PACKAGE_PREFIX}-libepoxy"
          "${MINGW_PACKAGE_PREFIX}-pango"
-         "${MINGW_PACKAGE_PREFIX}-vulkan-loader"
+         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-vulkan-loader")
          "${MINGW_PACKAGE_PREFIX}-gtk-update-icon-cache"
          "${MINGW_PACKAGE_PREFIX}-shared-mime-info")
 source=("https://download.gnome.org/sources/gtk/${pkgver:0:4}/gtk-${pkgver}.tar.xz"
@@ -66,6 +67,12 @@ build() {
     extra_config+=("--buildtype=debug")
   fi
 
+  if [[ ${CARCH} == i686 ]]; then
+    extra_config+=("-Dmedia-gstreamer=disabled" "-Dvulkan=disabled")
+  else
+    extra_config+=("-Dmedia-gstreamer=enabled" "-Dvulkan=enabled"")
+  fi
+
   MSYS2_ARG_CONV_EXCL="--prefix=" \
   ${MINGW_PREFIX}/bin/meson.exe setup \
     --prefix="${MINGW_PREFIX}" \
@@ -74,6 +81,7 @@ build() {
     "${extra_config[@]}" \
     -Dbuild-examples=false \
     -Dbuild-tests=false \
+    -Dbuild-testsuite=false \
     -Dman-pages=true \
     -Dmacos-backend=false \
     -Dx11-backend=false \
@@ -90,9 +98,11 @@ package_gtk4() {
 
   install -Dm644 "${srcdir}/gtk-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 
-  # split media-gstreamer
-  mkdir -p dest${MINGW_PREFIX}/lib
-  mv "${pkgdir}${MINGW_PREFIX}"/lib/gtk-4.0 dest${MINGW_PREFIX}/lib/gtk-4.0
+  if [[ ${CARCH} != i686 ]]; then
+    # split media-gstreamer
+    mkdir -p dest${MINGW_PREFIX}/lib
+    mv "${pkgdir}${MINGW_PREFIX}"/lib/gtk-4.0 dest${MINGW_PREFIX}/lib/gtk-4.0
+  fi
 }
 
 package_gtk4-media-gstreamer() {
