mingw-w64-headers: revert commit breaking doxygen on aarch64
See https://sourceforge.net/p/mingw-w64/mailman/message/59112743/

--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgdesc="MinGW-w64 headers for Windows (mingw-w64)"
 pkgver=12.0.0.r459.g63f3f2846
-pkgrel=1
+pkgrel=2
 _commit='63f3f284635f4a1a09828acd2e6f6bea1eacb0e7'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,8 +20,10 @@ provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
+        "https://github.com/mingw-w64/mingw-w64/commit/f0044963d7ba0c90deea42d434fa790b4cf29f50.patch"
         0001-remove-ireference-boolean.patch)
 sha256sums=('9744d8767fa49d631c8b411df20bd285e9bce7261850f78d7edf65db1798ac05'
+            '878a23b1d47192e935782cc0210bee7106f20d375f12c6a0286ab2ae41641865'
             'cad48616325b5e70afa4e02424021fc8d54e17dcbf86eae3df990d3500080236')
 
 pkgver() {
@@ -32,6 +34,10 @@ pkgver() {
 prepare() {
   cd "${srcdir}/mingw-w64"
   git apply "${srcdir}/0001-remove-ireference-boolean.patch"
+
+  # breaks doxygen, see
+  # https://sourceforge.net/p/mingw-w64/mailman/message/59112743/
+  git apply -R "${srcdir}/f0044963d7ba0c90deea42d434fa790b4cf29f50.patch"
 }
 
 build() {
