trilinos: fix conflict with gtest

--- a/mingw-w64-trilinos/PKGBUILD
+++ b/mingw-w64-trilinos/PKGBUILD
@@ -10,7 +10,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=16.0.0
 _pkgver=${pkgver//./-}
-pkgrel=2
+pkgrel=3
 pkgdesc='Algorithms for the solution of large-scale scientific problems" (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -28,18 +28,23 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-fc"
+             "${MINGW_PACKAGE_PREFIX}-gtest"
              "${MINGW_PACKAGE_PREFIX}-perl"
              "${MINGW_PACKAGE_PREFIX}-bc"
              "${MINGW_PACKAGE_PREFIX}-python-numpy"
              "unzip")
 optdepends=("${MINGW_PACKAGE_PREFIX}-seacas")
-source=("https://github.com/${_realname}/Trilinos/archive/${_realname}-release-${_pkgver}.tar.gz")
-sha256sums=('46bfc40419ed2aa2db38c144fb8e61d4aa8170eaa654a88d833ba6b92903f309')
+source=("https://github.com/${_realname}/Trilinos/archive/${_realname}-release-${_pkgver}.tar.gz"
+        "https://github.com/trilinos/Trilinos/commit/b7a7a71d9ab66970e082474775952348b5a0eea4.patch")
+sha256sums=('46bfc40419ed2aa2db38c144fb8e61d4aa8170eaa654a88d833ba6b92903f309'
+            '68eac70c267007fe50e23e9a988848a9801f11498296d574fb000d6ecf9f3d6d')
 noextract=(${_realname}-release-${_pkgver}.tar.gz)
 
 prepare(){
-  plain "Extract ${_realname}-release-${_pkgver}.tar.gz"
   tar -xzf ${_realname}-release-${_pkgver}.tar.gz || true
+  cd "Trilinos-${_realname}-release-${_pkgver}"
+
+  patch -Np1 -i ../b7a7a71d9ab66970e082474775952348b5a0eea4.patch
 }
 
 build() {
@@ -48,6 +53,10 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [[ ${MSYSTEM} != CLANG* ]]; then
+    extra_config+=("-DCMAKE_Fortran_FLAGS='$FCFLAGS -fallow-argument-mismatch'")
   fi
 
   #Static Build
@@ -60,7 +69,7 @@ build() {
       "${extra_config[@]}" \
       -DBLAS_LIBRARY_NAMES="openblas" \
       -DLAPACK_LIBRARY_NAMES="openblas" \
-      -DTrilinos_ENABLE_Fortran=$([[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]] && echo "ON" || echo "OFF") \
+      -DTrilinos_ENABLE_Fortran=ON \
       -DTrilinos_ENABLE_ALL_OPTIONAL_PACKAGES=ON \
       -DTrilinos_ENABLE_ALL_PACKAGES=ON \
       -DTPL_ENABLE_DLlib=OFF \
@@ -68,11 +77,13 @@ build() {
       -DTrilinos_ENABLE_Epetra=ON \
       -DTrilinos_ENABLE_Intrepid2=OFF \
       -DTrilinos_ENABLE_SEACAS=OFF \
-      -DCMAKE_Fortran_FLAGS="$FCFLAGS -fallow-argument-mismatch" \
+      -DTrilinos_ENABLE_Gtest=OFF \
+      -DTPL_ENABLE_gtest=OFF \
+      -DTrilinos_ENABLE_TESTS=OFF \
       ../Trilinos-${_realname}-release-${_pkgver}
-      
+
   ${MINGW_PREFIX}/bin/cmake --build .
-      
+
   #Shared Build
   mkdir -p "${srcdir}/build-${MSYSTEM}-shared" && cd "${srcdir}/build-${MSYSTEM}-shared"
 
@@ -84,7 +95,7 @@ build() {
       -DBUILD_SHARED_LIBS=ON \
       -DBLAS_LIBRARY_NAMES="openblas" \
       -DLAPACK_LIBRARY_NAMES="openblas" \
-      -DTrilinos_ENABLE_Fortran=$([[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]] && echo "ON" || echo "OFF") \
+      -DTrilinos_ENABLE_Fortran=ON \
       -DTrilinos_ENABLE_ALL_OPTIONAL_PACKAGES=ON \
       -DTrilinos_ENABLE_ALL_PACKAGES=ON \
       -DTPL_ENABLE_DLlib=OFF \
@@ -92,9 +103,11 @@ build() {
       -DTrilinos_ENABLE_Epetra=ON \
       -DTrilinos_ENABLE_Intrepid2=OFF \
       -DTrilinos_ENABLE_SEACAS=OFF \
-      -DCMAKE_Fortran_FLAGS="$FCFLAGS -fallow-argument-mismatch" \
+      -DTrilinos_ENABLE_Gtest=OFF \
+      -DTPL_ENABLE_gtest=OFF \
+      -DTrilinos_ENABLE_TESTS=OFF \
       ../Trilinos-${_realname}-release-${_pkgver}
-      
+
   ${MINGW_PREFIX}/bin/cmake --build .
 }
 
