codeblocks: update to 20.03.r13600

--- a/mingw-w64-codeblocks/PKGBUILD
+++ b/mingw-w64-codeblocks/PKGBUILD
@@ -6,10 +6,10 @@ _realname=codeblocks
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 _basever=20.03
-_revision=13596
+_revision=13600
 pkgver=${_basever}.r${_revision}
 pkgrel=1
-pkgdesc="Cross-platform C/C++ IDE (mingw-w64)"
+pkgdesc="A free C, C++ and Fortran IDE (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://www.codeblocks.org/'
