--- a/mingw-w64-libbacktrace/PKGBUILD
+++ b/mingw-w64-libbacktrace/PKGBUILD
@@ -2,9 +2,9 @@
 _realname=libbacktrace
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_commit='14818b7783eeb9a56c3f0fca78cefd3143f8c5f6'
-pkgver=r79.14818b7
-pkgrel=2
+_commit='1db85642e3fca189cf4e076f840a45d6934b2456'
+pkgver=r115.1db8564
+pkgrel=1
 pkgdesc="Library to produce symbolic backtraces (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,17 +17,17 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 source=("git+https://github.com/ianlancetaylor/libbacktrace.git#commit=${_commit}"
         "0001-libbacktrace-no-undefined.patch"
         "libbacktrace.pc")
-sha256sums=('SKIP'
+sha256sums=('3c5ebe9ae7a92e2f2e451211ee0c544ac9f035aa28c7195fe36fd9911088abcb'
             'cd4b22ecf0c775407919144a3adcb1a2069829432d65b6e019bfbcc5f3cef91e'
             '4f17323b633a0d0a80dc1ff29855c0caa7946562aa3a22d2fae4e426122d16ca')
 
 pkgver() {
-  cd "${srcdir}/${_realname}"
+  cd "${_realname}"
   printf "r%s.%s" "$(git rev-list --count "${_commit}")" "$(git rev-parse --short "${_commit}")"
 }
 
 prepare () {
-  cd "${srcdir}/${_realname}"
+  cd "${_realname}"
 
   # dont allow undefined symbols to build the dll
   git apply "${srcdir}/0001-libbacktrace-no-undefined.patch"
@@ -40,9 +40,6 @@ build() {
 
   ../${_realname}/configure \
     --prefix=${MINGW_PREFIX} \
-    --build=${MINGW_CHOST} \
-    --host=${MINGW_CHOST} \
-    --target=${MINGW_CHOST} \
     --enable-static \
     --enable-shared
 
