--- a/mingw-w64-python-fixtures/PKGBUILD
+++ b/mingw-w64-python-fixtures/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=fixtures
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.1.0
-pkgrel=4
+pkgver=4.2.2
+pkgrel=1
 pkgdesc="Fixtures, reusable state for writing clean tests and more (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,8 +21,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-subunit"
               "${MINGW_PACKAGE_PREFIX}-python-testtools")
-source=("https://pypi.io/packages/source/f/fixtures/fixtures-${pkgver}.tar.gz")
-sha256sums=('82b1c5e69f615526ef6c067188a1e6c6067df7f88332509c99f8b8fdbb9776f3')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('af9368737fad6fd501638ca99c78000c3f3fb03fa40a60f9e9d39aa64f342bc1')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
