python-inflect: update to 7.5.0

--- a/mingw-w64-python-inflect/PKGBUILD
+++ b/mingw-w64-python-inflect/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=inflect
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=7.4.0
-pkgrel=2
+pkgver=7.5.0
+pkgrel=1
 pkgdesc='Python module to correctly generate plurals, ordinals, indefinite articles; convert numbers to words (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,10 +21,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('904baa17cc2cb74827a6c27b95692e95670dadc72b208b3e8c1c05aeed47026b')
+sha256sums=('faf19801c3742ed5a05a8ce388e0d8fe1a07f8d095c82201eb904f5d27ad571f')
 
 build() {
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
+  export SETUPTOOLS_SCM_PRETEND_VERSION="${pkgver}"
 
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
