python-requests-mock: update to 1.12.1

--- a/mingw-w64-python-requests-mock/PKGBUILD
+++ b/mingw-w64-python-requests-mock/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=requests-mock
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.11.0
-pkgrel=3
+pkgver=1.12.1
+pkgrel=1
 pkgdesc='A mock of useful classes and functions to be used with python-requests. (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/jamielennox/requests-mock"
+url='https://requests-mock.readthedocs.io/'
+msys2_repository_url='https://github.com/jamielennox/requests-mock'
 msys2_references=(
   'pypi: requests-mock'
 )
@@ -22,21 +23,13 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-mock"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-pbr")
-options=('!emptydirs')
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ef10b572b489a5f28e09b708697208c4a3b2b89ef80a9f01584340ea357ec3c4')
-
-
-prepare() {
-  rm -rf python-build-${MSYSTEM}
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-
-  export PBR_VERSION=$pkgver
-}
+sha256sums=('e9e12e333b525156e82a3c852f22016b9158220d2f47454de9cae8a77d371401')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  export SETUPTOOLS_SCM_PRETEND_VERSION="${pkgver}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
