streamlink: update to 7.1.1

--- a/mingw-w64-streamlink/PKGBUILD
+++ b/mingw-w64-streamlink/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=streamlink
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=7.0.0
+pkgver=7.1.1
 pkgrel=1
 pkgdesc="A CLI utility that extracts streams from various services and pipes them into a video player of choice. (mingw-w64)"
 arch=('any')
@@ -15,12 +15,12 @@ msys2_references=(
 msys2_repository_url='https://github.com/streamlink/streamlink/'
 url='https://streamlink.github.io/'
 license=('spdx:BSD-2-Clause')
-depends=("${MINGW_PACKAGE_PREFIX}-python-"{certifi,isodate,lxml,pycountry,pycryptodome,pysocks,requests,trio,trio-websocket,typing_extensions,urllib3,websocket-client})
+depends=("${MINGW_PACKAGE_PREFIX}-python-"{certifi,isodate,lxml,pycountry,pycryptodome,pysocks,requests,trio,trio-websocket,urllib3,websocket-client})
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-"{build,installer,setuptools})
 optdepends=("${MINGW_PACKAGE_PREFIX}-ffmpeg: Required to play streams that are made up of separate audio and video streams, eg. YouTube 1080p+")
 options=('!strip')
 source=("https://github.com/${_realname}/${_realname}/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz"{,.asc})
-sha256sums=('51a4062862e6795d694046ca6e70549d6d13583c640d1505966804b0e03feff2'
+sha256sums=('c1881ed0bba53612d979d9a918b7dec056fc93cd202a5b07a080e5568dbdab4c'
             'SKIP')
 validpgpkeys=('CDAC41B9122470FAF357A9D344448A298D5C3618') # Streamlink signing key <streamlink@protonmail.com>
 
