liboqs: enable CLANG64 I've successfully compiled it locally, also add a compiler flag to remove 'unknown warning' warning

--- a/mingw-w64-liboqs/PKGBUILD
+++ b/mingw-w64-liboqs/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.12.0
 pkgrel=1
 pkgdesc="C library for prototyping and experimenting with quantum-resistant cryptography (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://openquantumsafe.org/'
 msys2_repository_url="https://github.com/open-quantum-safe/liboqs"
 license=('spdx:MIT')
@@ -30,6 +30,10 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [[ ${CC} == clang ]]; then
+    export CFLAGS+=" -Wno-unknown-warning-option"
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
