doxygen: backport fix for 'register' undef issue
See https://github.com/doxygen/doxygen/pull/11302

This means we can remove the revert from mingw-w64 headers
which was using the register keyword.

--- a/mingw-w64-doxygen/PKGBUILD
+++ b/mingw-w64-doxygen/PKGBUILD
@@ -4,7 +4,7 @@ _realname=doxygen
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.13.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A documentation system for C++, C, Java, IDL and PHP (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -34,10 +34,12 @@ if [[ ${CARCH} != i686 ]]; then
 fi
 source=(https://www.doxygen.nl/files/${_realname}-${pkgver}.src.tar.gz
         cmake-mingw.patch
-        0002-clang-19-fix.patch)
+        0002-clang-19-fix.patch
+        https://patch-diff.githubusercontent.com/raw/doxygen/doxygen/pull/11302.patch)
 sha256sums=('99434f8130f68be4a4a817e540620aedf95c617c68cc73434de04207abaaae46'
             '2b86315039128992f750e3f9793cb4a769e1ff62e77a00ae391d83810bc6f920'
-            '8bd57267943b74e1bc4cae2c87da0255d747b6a2d35276fbfeb45f817947e991')
+            '8bd57267943b74e1bc4cae2c87da0255d747b6a2d35276fbfeb45f817947e991'
+            '567c3b27baadf3e34c5af9c14909e1f05196950c80e75de42d5c71c56ca7192f')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -57,6 +59,10 @@ prepare() {
   # https://github.com/doxygen/doxygen/issues/10928
   apply_patch_with_msg \
     0002-clang-19-fix.patch
+
+  # https://github.com/doxygen/doxygen/pull/11302
+  apply_patch_with_msg \
+    11302.patch
 }
 
 build() {
