--- a/mingw-w64-python-marshmallow/PKGBUILD
+++ b/mingw-w64-python-marshmallow/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=marshmallow
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.20.2
-pkgrel=2
+pkgver=3.23.2
+pkgrel=1
 pkgdesc='A lightweight library for converting complex objects to and from simple Python datatypes (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/marshmallow-code/marshmallow'
+url='https://marshmallow.readthedocs.io/'
+msys2_repository_url='https://github.com/marshmallow-code/marshmallow'
 msys2_references=(
   'pypi: marshmallow'
   "cpe: cpe:2.3:a:marshmallow_project:marshmallow"
@@ -18,19 +19,12 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-packaging")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-flit-core")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('4c1daff273513dc5eb24b219a8035559dc573c8f322558ef85f5438ddd1236dd')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('c448ac6455ca4d794773f00bae22c2f351d62d739929f761dce5eacb5c468d7f')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
