rabbitmq-c: update to 0.15.0

--- a/mingw-w64-rabbitmq-c/PKGBUILD
+++ b/mingw-w64-rabbitmq-c/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=rabbitmq-c
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.14.0
+pkgver=0.15.0
 pkgrel=1
 pkgdesc="RabbitMQ C client (mingw-w64)"
 arch=('any')
@@ -22,7 +22,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-openssl"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
 source=("https://github.com/alanxz/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "0001-librabbitmq-CMakeLists.txt.patch")
-sha256sums=('839b28eae20075ac58f45925fe991d16a3138cbde015db0ee11df1acb1c493df'
+sha256sums=('7b652df52c0de4d19ca36c798ed81378cba7a03a0f0c5d498881ae2d79b241c2'
             'c82b9964e4e569303ca4369e632e7bec7c3c0d75992c5ffb2555700aba46d472')
 
 prepare() {
@@ -38,6 +38,11 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [[ $MINGW_PACKAGE_PREFIX != *-clang-* ]]; then
+    CFLAGS+=" -Wno-incompatible-pointer-types"
+    CXXFLAGS+=" -Wno-incompatible-pointer-types"
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
