gettext: update to 0.23.1

--- a/mingw-w64-gettext/PKGBUILD
+++ b/mingw-w64-gettext/PKGBUILD
@@ -3,9 +3,11 @@
 
 _realname=gettext
 pkgbase=mingw-w64-${_realname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-runtime" "${MINGW_PACKAGE_PREFIX}-${_realname}-tools")
-pkgver=0.22.5
-pkgrel=2
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-runtime"
+         "${MINGW_PACKAGE_PREFIX}-${_realname}-libtextstyle"
+         "${MINGW_PACKAGE_PREFIX}-${_realname}-tools")
+pkgver=0.23.1
+pkgrel=1
 pkgdesc="GNU internationalization library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,22 +22,20 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ncurses"
              "${MINGW_PACKAGE_PREFIX}-libiconv"
              "groff")
-source=(https://ftp.gnu.org/pub/gnu/${_realname}/${_realname}-${pkgver}.tar.gz{,.sig}
+source=(https://ftp.gnu.org/pub/gnu/${_realname}/${_realname}-${pkgver}.tar.lz{,.sig}
+        0001-restore-DllMain-symbol.patch
         0005-Fix-compilation-of-pthread_sigmask.c.patch
         122-Use-LF-as-newline-in-envsubst.patch
-        gettext-0.22-disable-libtextstyle.patch
         0021-replace-fsync.patch
         0022-libasprintf.patch
-        0023-gnulib.patch
         0024-disable-gnu-format.patch)
-sha256sums=('ec1705b1e969b83a9f073144ec806151db88127f5e40fe5a94cb6c8fa48996a0'
+sha256sums=('093de8a7ffb4670981fac271301bff56433c2fa1e71fb3b8b621891a21e8fd49'
             'SKIP'
+            'e3a933c96a711bbb5ba6e584dd35f897dc7043da90a5682c05b137a0ad93bc7a'
             'cbc2f533012d646521afa20f8b256917fce040741ff42cf53fb6dd7123a6670a'
-            'ef9f11a1cd10539d4323c6fcba3013cc503d47366004fe8a99c642dc3ddf2fd0'
-            'a28a27192f336f0b0908bdbf840d3b19d7b587c4ac52cad635cb43e95eb3c78d'
+            'ec39103d851262c02c27b7038f3c538e03afaefc6aa050311d62519d192ff38c'
             '380dbddee2f9e2feee4c1435e8a942b5d11d0125e60c3350ebb10c19b19011aa'
             'c354f6a7021069c99b90f1c6d6f6a4ccf40a01e9f6742b866df2b5a7286cb868'
-            '4f34906eeb535c74fa3f2936729b59c36d05d503a274e2b850fc770263c60b46'
             'ce7ccf6dd3a492cab322253cd67310899b546eccc25821c25cbc047a1a984633')
 validpgpkeys=('462225C3B46F34879FC8496CD605848ED7E69871'  # Daiki Ueno
               '9001B85AF9E1B83DF1BDA942F5BE8B267C6A406D') # Bruno Haible
@@ -53,17 +53,13 @@ prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
 
   apply_patch_with_msg \
+    0001-restore-DllMain-symbol.patch \
     0005-Fix-compilation-of-pthread_sigmask.c.patch \
     122-Use-LF-as-newline-in-envsubst.patch
 
-  # https://gitlab.archlinux.org/archlinux/packaging/packages/gettext/-/blob/c85956ab0dc426c674551fd2bf977a96089752e9/gettext-0.22-disable-libtextstyle.patch
-  apply_patch_with_msg \
-    gettext-0.22-disable-libtextstyle.patch
-
   apply_patch_with_msg \
     0021-replace-fsync.patch \
-    0022-libasprintf.patch \
-    0023-gnulib.patch
+    0022-libasprintf.patch
 
   # https://github.com/msys2/MINGW-packages/pull/19047#issuecomment-1960769618
   # https://git.savannah.gnu.org/gitweb/?p=gettext.git;a=commitdiff;h=eef429bbccbff2bca08bafc2ff76f7ec2be93d2a
@@ -81,7 +77,7 @@ _build() {
   # incompatible declarations of mkdir in the same compilation unit.
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
-    --build=${MINGW_CHOST} \
+    --libexecdir=${MINGW_PREFIX}/lib \
     --disable-java \
     --disable-native-java \
     --disable-csharp \
@@ -108,15 +104,14 @@ _build() {
 }
 
 build() {
-
   export MSYS2_ARG_CONV_EXCL="-DLOCALEDIR=;-DLIBDIR=;-DLOCALE_ALIAS_PATH="
 
   msg2 "Build static libraries"
-  mkdir -p ${srcdir}/build-${MSYSTEM}-static && cd ${srcdir}/build-${MSYSTEM}-static
+  mkdir -p "${srcdir}"/build-${MSYSTEM}-static && cd "${srcdir}"/build-${MSYSTEM}-static
   _build "--enable-static --disable-shared"
 
   msg2 "Build shared libraries"
-  mkdir -p ${srcdir}/build-${MSYSTEM}-shared && cd ${srcdir}/build-${MSYSTEM}-shared
+  mkdir -p "${srcdir}"/build-${MSYSTEM}-shared && cd "${srcdir}"/build-${MSYSTEM}-shared
   _build "--enable-shared --disable-static"
 }
 
@@ -151,10 +146,10 @@ package_gettext-runtime() {
   )
   conflicts=("${MINGW_PACKAGE_PREFIX}-gettext<=0.22.4-3")
 
-  cd ${srcdir}/build-${MSYSTEM}-static/gettext-runtime
+  cd "${srcdir}"/build-${MSYSTEM}-static/gettext-runtime
   make DESTDIR="${pkgdir}" install
 
-  cd ${srcdir}/build-${MSYSTEM}-shared/gettext-runtime
+  cd "${srcdir}"/build-${MSYSTEM}-shared/gettext-runtime
   make DESTDIR="${pkgdir}" install
 
   # Licenses
@@ -168,21 +163,39 @@ package_gettext-runtime() {
     "${pkgdir}${MINGW_PREFIX}/share/licenses/gettext-runtime/libasprintf/COPYING.LIB"
 }
 
+package_gettext-libtextstyle() {
+  pkgdesc="GNU LIBTEXTSTYLE - Text styling library (mingw-w64)"
+  depends=("${MINGW_PACKAGE_PREFIX}-libiconv")
+  license=("spdx:GPL-3.0-or-later")
+
+  cd "${srcdir}"/build-${MSYSTEM}-static/libtextstyle
+  make DESTDIR="${pkgdir}" install
+
+  cd "${srcdir}"/build-${MSYSTEM}-shared/libtextstyle
+  make DESTDIR="${pkgdir}" install
+
+  # License
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/libtextstyle/COPYING \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/gettext-libtextstyle/COPYING
+}
+
 package_gettext-tools() {
   pkgdesc="GNU internationalization tools (mingw-w64)"
   depends=(
     "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
+    "${MINGW_PACKAGE_PREFIX}-gettext-libtextstyle"
     "${MINGW_PACKAGE_PREFIX}-gcc-libs"
     "${MINGW_PACKAGE_PREFIX}-libiconv"
   )
   provides=("${MINGW_PACKAGE_PREFIX}-gettext=${pkgver}-${pkgrel}")
   conflicts=("${MINGW_PACKAGE_PREFIX}-gettext<=0.22.4-3")
   replaces=("${MINGW_PACKAGE_PREFIX}-gettext")
+  license=("spdx:GPL-3.0-or-later")
 
-  cd ${srcdir}/build-${MSYSTEM}-static/gettext-tools
+  cd "${srcdir}"/build-${MSYSTEM}-static/gettext-tools
   make DESTDIR="${pkgdir}" install
 
-  cd ${srcdir}/build-${MSYSTEM}-shared/gettext-tools
+  cd "${srcdir}"/build-${MSYSTEM}-shared/gettext-tools
   make DESTDIR="${pkgdir}" install
 
   # Licenses
