python-rapidfuzz: update to 3.11.0

--- a/mingw-w64-python-rapidfuzz/PKGBUILD
+++ b/mingw-w64-python-rapidfuzz/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=rapidfuzz
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.6.2
-pkgrel=3
+pkgver=3.11.0
+pkgrel=1
 pkgdesc="Rapid fuzzy string matching. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,25 +12,24 @@ msys2_references=(
   'pypi: rapidfuzz'
 )
 license=('spdx:MIT')
-url="https://maxbachmann.github.io/RapidFuzz/"
-msys2_repository_url="https://github.com/maxbachmann/RapidFuzz/"
+url="https://rapidfuzz.github.io/RapidFuzz/"
+msys2_repository_url="https://github.com/rapidfuzz/RapidFuzz/"
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
 )
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-scikit-build"
+             "${MINGW_PACKAGE_PREFIX}-python-scikit-build-core"
              "${MINGW_PACKAGE_PREFIX}-rapidfuzz-cpp"
              "${MINGW_PACKAGE_PREFIX}-cython"
              "${MINGW_PACKAGE_PREFIX}-cc")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-cov"
               "${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('cf911e792ab0c431694c9bf2648afabfd92099103f2e31492893e078ddca5e1a')
+sha256sums=('a53ca4d3f52f00b393fab9b5913c5bafb9afc27d030c8a1db1283da6917a860f')
 
 prepare(){
-  cd "${srcdir}"
   cp -r "RapidFuzz-${pkgver}" "python-build-${MSYSTEM}"
   rm -rf "python-build-${MSYSTEM}/extern"
   cp -r "${_realname}-${pkgver}/extern" "python-build-${MSYSTEM}/extern"
