python-cmd2: update to 2.5.8

--- a/mingw-w64-python-cmd2/PKGBUILD
+++ b/mingw-w64-python-cmd2/PKGBUILD
@@ -3,11 +3,8 @@
 _realname=cmd2
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=2.4.3
-pkgrel=4
+pkgver=2.5.8
+pkgrel=1
 pkgdesc="Extra features for standard library's cmd module (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,10 +12,8 @@ url='https://github.com/python-cmd2/cmd2'
 msys2_references=(
   'pypi: cmd2'
 )
-license=('MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-attrs"
-         "${MINGW_PACKAGE_PREFIX}-python-pyperclip"
-         "${MINGW_PACKAGE_PREFIX}-python-typing_extensions"
+license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-python-pyperclip"
          "${MINGW_PACKAGE_PREFIX}-python-pyreadline3"
          "${MINGW_PACKAGE_PREFIX}-python-wcwidth")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
@@ -27,7 +22,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-xdist"
               "${MINGW_PACKAGE_PREFIX}-python-cov"
               "${MINGW_PACKAGE_PREFIX}-python-mock")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/python-cmd2/cmd2/archive/${pkgver}.tar.gz")
-sha512sums=('4add072949ba88c7ebd8e26c9c91374543f486763c710b1a2c8a6cfdae46c97b39cafd8a424d71bcc40e20161956d8ac1580075049cd57cc4c01128fb2d3683d')
+sha512sums=('07c67ef66861ec3cdf697405d9cf53fc0b530b65d1933224063c3aed2a881978673a5065bd089b51ca07d63414d849a33a8b9e2d963be25d023b1eadda29b803')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
