trilinos: add kokkos (provides)

--- a/mingw-w64-trilinos/PKGBUILD
+++ b/mingw-w64-trilinos/PKGBUILD
@@ -10,7 +10,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=16.0.0
 _pkgver=${pkgver//./-}
-pkgrel=3
+pkgrel=4
 pkgdesc='Algorithms for the solution of large-scale scientific problems" (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -34,6 +34,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python-numpy"
              "unzip")
 optdepends=("${MINGW_PACKAGE_PREFIX}-seacas")
+provides=("${MINGW_PACKAGE_PREFIX}-kokkos")
 source=("https://github.com/${_realname}/Trilinos/archive/${_realname}-release-${_pkgver}.tar.gz"
         "https://github.com/trilinos/Trilinos/commit/b7a7a71d9ab66970e082474775952348b5a0eea4.patch")
 sha256sums=('46bfc40419ed2aa2db38c144fb8e61d4aa8170eaa654a88d833ba6b92903f309'
