ruff: update to 0.8.5

--- a/mingw-w64-ruff/PKGBUILD
+++ b/mingw-w64-ruff/PKGBUILD
@@ -4,7 +4,7 @@ _realname=ruff
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.8.4
+pkgver=0.8.5
 pkgrel=1
 pkgdesc="An extremely fast Python linter, written in Rust (mingw-w64)"
 arch=('any')
@@ -26,7 +26,7 @@ makedepends=(
 )
 options=('!strip')
 source=("git+${msys2_repository_url}.git#tag=${pkgver}")
-sha256sums=('938863035707237899d6f1cb3df5e393631ddf30dea0a6b77d8f083478510655')
+sha256sums=('40d2feede4a07d8f998e15684e7acf00a629405eff00cf38249a456f78536647')
 
 prepare() {
   cd "${_realname}"
@@ -40,6 +40,7 @@ prepare() {
 build() {
   cd "${_realname}"
 
+  export _PYTHON_HOST_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   export WINAPI_NO_BUNDLED_LIBRARIES=1
   maturin build --release --strip --frozen --all-features
 }
