gtk-elementary-theme: update to 8.2.0

--- a/mingw-w64-gtk-elementary-theme/PKGBUILD
+++ b/mingw-w64-gtk-elementary-theme/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=gtk-elementary-theme
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=8.0.0
+pkgver=8.2.0
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,10 +18,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "git")
-license=("GPL3")
+license=("spdx:GPL-3.0-or-later")
 url="https://github.com/elementary/stylesheet"
 source=(${_realname}-${pkgver}::git+https://github.com/elementary/stylesheet.git#tag=${pkgver})
-sha256sums=('98b6ae60b2279ff6af268d8d6d4301627643bb91066ffeab6170825ac1dee039')
+sha256sums=('0173a61b87f850efc2c608b2fd4e1bffb5969f404c03506ba597bec46400ce02')
 
 build() {
   [[ -d build-${MSYSTEM} ]] && rm -rf build-${MSYSTEM}
