gdal: Update to 3.10.0
and backport some build fixes

--- a/mingw-w64-gdal/PKGBUILD
+++ b/mingw-w64-gdal/PKGBUILD
@@ -8,8 +8,8 @@ _realname=gdal
 pkgbase=mingw-w64-${_realname,,}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.9.3
-pkgrel=4
+pkgver=3.10.0
+pkgrel=1
 pkgdesc="A translator library for raster geospatial data formats (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -80,10 +80,14 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-zstd")
 source=(https://github.com/OSGeo/gdal/releases/download/v${pkgver}/gdal-${pkgver}.tar.gz
         001-fix-bindings-install-path.patch
-        002-remove-manual-soversion.patch)
-sha256sums=('f293d8ccc6b98f617db88f8593eae37f7e4b32d49a615b2cba5ced12c7bebdae'
+        002-remove-manual-soversion.patch
+        https://github.com/OSGeo/gdal/commit/a62665e7ffc0d7daf5f211c8e5ae44a9b5a4c802.patch
+        https://github.com/OSGeo/gdal/commit/57c59d5262314423157e5d7b4051061899a84ffc.patch)
+sha256sums=('946ef444489bedbc1b04bd4c115d67ae8d3f3e4a5798d5a2f1cb2a11014105b2'
             'bfb0b42c8562bd45ae5cff71d42b042e398dff9a9c1f5bb08d8717a7753d4f3f'
-            'fc815a58fe229db3c44bae15f405cafbeb82de91ec3f35564569c5bbecb1c3d7')
+            'fc815a58fe229db3c44bae15f405cafbeb82de91ec3f35564569c5bbecb1c3d7'
+            '3d40cd4ad3dee2959a350b7880f9cdb549f047a89d8569a01336e8925bb6ac1a'
+            '98e2a16b824de63960a9f331088497dc92982e656983129aee9a889eb10c56d1')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -97,7 +101,9 @@ prepare() {
   cd ${srcdir}/${_realname}-${pkgver}
   apply_patch_with_msg \
     001-fix-bindings-install-path.patch \
-    002-remove-manual-soversion.patch
+    002-remove-manual-soversion.patch \
+    a62665e7ffc0d7daf5f211c8e5ae44a9b5a4c802.patch \
+    57c59d5262314423157e5d7b4051061899a84ffc.patch
 }
 
 build() {
