uv: update to 0.5.14

--- a/mingw-w64-uv/PKGBUILD
+++ b/mingw-w64-uv/PKGBUILD
@@ -4,7 +4,7 @@ _realname=uv
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.5.13
+pkgver=0.5.14
 pkgrel=1
 pkgdesc='An extremely fast Python package installer and resolver, written in Rust (mingw-w64)'
 arch=('any')
@@ -30,7 +30,7 @@ source=("git+${url}.git#tag=${pkgver}"
         "bzip2-sys.tar.gz::https://crates.io/api/v1/crates/bzip2-sys/0.1.11+1.0.8/download"
         "bzip2-use-pkgconfig.patch"
         "link-zstd-dynamically.patch")
-sha256sums=('e33d8364be50d02f77d0d6510859743a40a44d3a0bd04d432097804d8f7e71f9'
+sha256sums=('d6b47aa45ac61dcff2e81d546b623992ff562b11805b07c7987c51af29d95d4b'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             '736a955f3fa7875102d57c82b8cac37ec45224a07fd32d58f9f7a186b6cd4cdc'
             'f73309fb98b89b2085bccee6ffb66820082628d096bc989922b25d33a1f5f378'
@@ -59,6 +59,7 @@ build() {
   export PKG_CONFIG_ALL_DYNAMIC=1
   export ZSTD_SYS_USE_PKG_CONFIG=1
   export WINAPI_NO_BUNDLED_LIBRARIES=1
+  export _PYTHON_HOST_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   maturin build --frozen --strip --release --all-features
 }
 
