add a workaround for maturin-built packages recent pip update introduced a new check for WHEEL files, and such files produced by maturin are hardcoded to add `win32` platform, which is different to one from mingw cpython. see https://github.com/msys2/MINGW-packages/pull/22963#issuecomment-2568227418. adding without rebuild just to prevent confusions in case of package update (and while it's not fixed in maturin upstream)

--- a/mingw-w64-python-pydantic-core/PKGBUILD
+++ b/mingw-w64-python-pydantic-core/PKGBUILD
@@ -26,6 +26,7 @@ sha256sums=('eb026e5a4c1fee05726072337ff51d1efb6f59090b7da90d30ea58625b1ffb39')
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
+  export _PYTHON_HOST_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
