--- a/mingw-w64-python-pywinpty/PKGBUILD
+++ b/mingw-w64-python-pywinpty/PKGBUILD
@@ -31,6 +31,7 @@ prepare() {
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
+  export _PYTHON_HOST_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   python -m build --wheel --skip-dependency-check --no-isolation
 }
 
