--- a/mingw-w64-python-watchfiles/PKGBUILD
+++ b/mingw-w64-python-watchfiles/PKGBUILD
@@ -37,6 +37,7 @@ build() {
   cd "${srcdir}/${_realname}-${pkgver}"
 
   export WINAPI_NO_BUNDLED_LIBRARIES=1
+  export _PYTHON_HOST_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   "${MINGW_PREFIX}"/bin/maturin build --release --strip --locked --all-features
 }
 
