--- a/mingw-w64-python-jellyfish/PKGBUILD
+++ b/mingw-w64-python-jellyfish/PKGBUILD
@@ -30,6 +30,7 @@ prepare() {
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
+  export _PYTHON_HOST_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
