--- a/mingw-w64-python-rpds-py/PKGBUILD
+++ b/mingw-w64-python-rpds-py/PKGBUILD
@@ -33,6 +33,7 @@ prepare() {
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
+  export _PYTHON_HOST_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   python -m build --wheel --skip-dependency-check --no-isolation
 }
 
