ncurses: update to 6.5.20241228

--- a/mingw-w64-ncurses/PKGBUILD
+++ b/mingw-w64-ncurses/PKGBUILD
@@ -4,25 +4,27 @@ _realname=ncurses
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _base_ver=6.5
-_date_rev=20240831
+_date_rev=20241228
 pkgver=${_base_ver}.${_date_rev}
 pkgrel=1
 pkgdesc="System V Release 4.0 curses emulation library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-depends=("${MINGW_PACKAGE_PREFIX}-libsystre")
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
 url="https://www.gnu.org/software/ncurses/"
 msys2_references=(
   "cpe: cpe:/a:gnu:ncurses"
   "cpe: cpe:/a:ncurses_project:ncurses"
 )
 license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-pcre2")
 source=("https://invisible-mirror.net/archives/ncurses/current/${_realname}-${_base_ver}-${_date_rev}.tgz"{,.asc}
         002-ncurses-config-win-paths.patch
         ncurses-6.3-cflags-private.patch
         ncurses-6.3-pkgconfig.patch)
-sha256sums=('685161fec9c20c0896f6d7569f8d1cba9124a1884d3d8be527253a773b787577'
+sha256sums=('cbeaf1d42c138711678e25f9945c97d6806ace510b090cd890fc70555c21b9bb'
             'SKIP'
             '5367d8f49aff92884b9daa014502df13e1812f1b7ee1b3a3cb18139f10039408'
             '3107029dfb807e338d34641d78329cd6725c58e6b873352621f4b9611a8380bf'
@@ -52,12 +54,10 @@ build() {
   ../${_realname}-${_base_ver}-${_date_rev}/configure \
     --prefix=${MINGW_PREFIX} \
     --mandir=${MINGW_PREFIX}/share/man \
-    --build=${MINGW_CHOST} \
-    --host=${MINGW_CHOST} \
-    --target=${MINGW_CHOST} \
     --without-ada \
     --with-cxx \
     --with-shared \
+    --with-pcre2 \
     --without-pthread \
     --disable-rpath \
     --enable-colorfgbg \
