ncurses: revert to libsystre
using pcre2 causes build failure of python

--- a/mingw-w64-ncurses/PKGBUILD
+++ b/mingw-w64-ncurses/PKGBUILD
@@ -6,7 +6,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _base_ver=6.5
 _date_rev=20241228
 pkgver=${_base_ver}.${_date_rev}
-pkgrel=1
+pkgrel=2
 pkgdesc="System V Release 4.0 curses emulation library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,10 +16,11 @@ msys2_references=(
   "cpe: cpe:/a:ncurses_project:ncurses"
 )
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
+         "${MINGW_PACKAGE_PREFIX}-libsystre")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-autotools"
-             "${MINGW_PACKAGE_PREFIX}-pcre2")
+             "${MINGW_PACKAGE_PREFIX}-autotools")
 source=("https://invisible-mirror.net/archives/ncurses/current/${_realname}-${_base_ver}-${_date_rev}.tgz"{,.asc}
         002-ncurses-config-win-paths.patch
         ncurses-6.3-cflags-private.patch
@@ -43,7 +44,6 @@ prepare() {
 }
 
 build() {
-  [[ -d build-${MSYSTEM} ]] && rm -rf build-${MSYSTEM}
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
 
   # It passes X_OK to access() on Windows which isn't supported with ucrt
@@ -54,25 +54,23 @@ build() {
   ../${_realname}-${_base_ver}-${_date_rev}/configure \
     --prefix=${MINGW_PREFIX} \
     --mandir=${MINGW_PREFIX}/share/man \
-    --without-ada \
     --with-cxx \
     --with-shared \
-    --with-pcre2 \
+    --without-ada \
     --without-pthread \
-    --disable-rpath \
+    --enable-assertions \
     --enable-colorfgbg \
+    --enable-database \
     --enable-ext-colors \
     --enable-ext-mouse \
-    --disable-symlinks \
-    --enable-warnings \
-    --enable-assertions \
-    --disable-home-terminfo \
-    --enable-database \
+    --enable-interop \
     --enable-sp-funcs \
     --enable-term-driver \
-    --enable-interop \
     --enable-widec \
     --enable-pc-files \
+    --disable-home-terminfo \
+    --disable-rpath \
+    --disable-symlinks \
     --with-pkg-config-libdir=${MINGW_PREFIX}/lib/pkgconfig
 
   make
