mimalloc: remove mingw32

--- a/mingw-w64-mimalloc/PKGBUILD
+++ b/mingw-w64-mimalloc/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.1.9
 pkgrel=1
 pkgdesc='General-purpose allocator with excellent performance characteristics (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:MIT')
 url='https://github.com/microsoft/mimalloc'
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
