mold: update to 2.35.1 and enable mimalloc (no more segfault)

--- a/mingw-w64-mold/PKGBUILD
+++ b/mingw-w64-mold/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=mold
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.35.0
+pkgver=2.35.1
 pkgrel=1
 pkgdesc="A Modern Linker (mingw-w64)"
 arch=('any')
@@ -15,6 +15,7 @@ msys2_references=(
 )
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread-git"
+         "${MINGW_PACKAGE_PREFIX}-mimalloc"
          "${MINGW_PACKAGE_PREFIX}-tbb"
          "${MINGW_PACKAGE_PREFIX}-zlib"
          "${MINGW_PACKAGE_PREFIX}-zstd"
@@ -24,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/rui314/mold/archive/v${pkgver}.tar.gz"
         "002-cmake-copy-instead-symlink.patch")
-sha256sums=('2703f1c88c588523815886478950bcae1ef02190dc4787e0d120a293b1a46e3b'
+sha256sums=('912b90afe7fde03e53db08d85a62c7b03a57417e54afc72c08e2fa07cab421ff'
             '0c0c755132035defbe857977fd1c0dcd4251f4a241506f1f249ce5be3c534576')
 noextract=(${_realname}-${pkgver}.tar.gz)
 
@@ -51,7 +52,7 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       -DCMAKE_INSTALL_LIBEXECDIR='lib' \
       "${_extra_config[@]}" \
-      -DMOLD_USE_MIMALLOC=OFF \
+      -DMOLD_USE_SYSTEM_MIMALLOC=ON \
       -DMOLD_USE_SYSTEM_TBB=ON \
       -DMOLD_USE_MOLD=OFF \
       -DBUILD_TESTING=OFF \
