libgpr: update to 25.0.0

--- a/mingw-w64-libgpr/PKGBUILD
+++ b/mingw-w64-libgpr/PKGBUILD
@@ -3,9 +3,8 @@
 _realname=libgpr
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=24.0.0
-pkgrel=2
-
+pkgver=25.0.0
+pkgrel=1
 pkgdesc="Library for GPRbuild project files (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -19,21 +18,19 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-xmlada")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gprbuild")
 source=("https://github.com/AdaCore/gprbuild/archive/v${pkgver}/gprbuild-${pkgver}.tar.gz")
-sha256sums=('c7f3b1844556f7e85d4e7b6bcca6dc7039f415e5b9a8ae3593e48d2a6eea16b1')
+sha256sums=('d12f94c1ec0b6e219f6b162f71f57129d22426e7798092f5f85b9ec2cc818bf1')
 
 build() {
-  [[ -d "${srcdir}"/build-${MSYSTEM} ]] && rm -rf "${srcdir}"/build-${MSYSTEM}
-  cp -r "${srcdir}/gprbuild-${pkgver}" "${srcdir}"/build-${MSYSTEM}
-  cd "${srcdir}"/build-${MSYSTEM}
+  cp -r "gprbuild-${pkgver}" "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
 
   make libgpr.build
 }
 
 package() {
-  cd "${srcdir}"/build-${MSYSTEM}
+  cd build-${MSYSTEM}
 
   make libgpr.install prefix="${pkgdir}${MINGW_PREFIX}"
 
   # Copy License Files
-  install -Dm644 -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/" COPYING*
+  install -Dm644 -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/" COPYING{3,.RUNTIME}
 }
