python-cx-freeze: update to 7.2.8

--- a/mingw-w64-python-cx-freeze/PKGBUILD
+++ b/mingw-w64-python-cx-freeze/PKGBUILD
@@ -12,11 +12,17 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-python3-cx_Freeze"
            "${MINGW_PACKAGE_PREFIX}-python-cx_Freeze")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-cx_Freeze"
           "${MINGW_PACKAGE_PREFIX}-python-cx_Freeze")
-pkgver=7.2.7
+pkgver=7.2.8
 pkgrel=1
 pkgdesc="Creates standalone executables from Python scripts, with the same performance (mingw-w64)"
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('c4d43a4e5357352ac5a89203fda3a8cfadf033d43682f73abbefd3860ce50fb4')
+source=(
+  "https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz"
+  "0001.patch"
+)
+sha256sums=(
+  '678fe5b074c1511918eded7b3cbe542ea57b4ee292645cdaceb9c691ce13293e'
+  'c73f986668aa8e880134e26a1b218ca88075b22581a3db00e1f3de13be2db7b6'
+)
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
 msys2_references=(
@@ -45,13 +51,13 @@ checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pytest-mock"
   "${MINGW_PACKAGE_PREFIX}-python-pytest-timeout"
   "${MINGW_PACKAGE_PREFIX}-python-pytest-xdist"
-  "${MINGW_PACKAGE_PREFIX}-python-psutil"
 )
 
 prepare() {
   cd "${srcdir}"/cx_Freeze-${pkgver}
   # ignore version check for setuptools
   sed -i 's/"setuptools>=.*"/"setuptools"/' pyproject.toml
+  patch -p1 -i "${srcdir}"/0001.patch
 
   rm -Rf "${srcdir}"/python-${_realname}-${MSYSTEM}
   cp -a "${srcdir}"/cx_Freeze-${pkgver} "${srcdir}"/python-${_realname}-${MSYSTEM}
