--- a/mingw-w64-gtk4/PKGBUILD
+++ b/mingw-w64-gtk4/PKGBUILD
@@ -70,7 +70,7 @@ build() {
   if [[ ${CARCH} == i686 ]]; then
     extra_config+=("-Dmedia-gstreamer=disabled" "-Dvulkan=disabled")
   else
-    extra_config+=("-Dmedia-gstreamer=enabled" "-Dvulkan=enabled"")
+    extra_config+=("-Dmedia-gstreamer=enabled" "-Dvulkan=enabled")
   fi
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
