--- a/mingw-w64-mysql-client/PKGBUILD
+++ b/mingw-w64-mysql-client/PKGBUILD
@@ -19,7 +19,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-libevent"
          "${MINGW_PACKAGE_PREFIX}-zlib"
          "${MINGW_PACKAGE_PREFIX}-zstd"
          "${MINGW_PACKAGE_PREFIX}-openssl")
-source=("mysql-server-mysql-9.1.0.tar.gz" #"https://github.com/mysql/mysql-server/archive/refs/tags/mysql-${pkgver}.tar.gz"
+source=("https://github.com/mysql/mysql-server/archive/refs/tags/mysql-${pkgver}.tar.gz"
         "0001-Fixed-build-issue-on-MSYS2.patch")
 sha256sums=('2bf56cad7ada7a758620e63e70d6445e5c9d93f910e7594959ea436a9b25a1be'
             '7429cb2f1798c9a2396f9842902f65aa19a99d27b37148a6083a3d1682ac5473')
