--- a/mingw-w64-mysql-client/PKGBUILD
+++ b/mingw-w64-mysql-client/PKGBUILD
@@ -11,7 +11,8 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/mysql/mysql-server"
 license=('spdx:LGPL-2.1-or-later')
 options=('strip' 'staticlibs')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+makedepends=("git"
+             "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 depends=("${MINGW_PACKAGE_PREFIX}-libevent"
