--- a/mingw-w64-mysql-client/PKGBUILD
+++ b/mingw-w64-mysql-client/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: taozuhong <taozuhong@gmail.com>
+# Maintainer: https://github.com/taozuhong
 
 _realname=mysql-client
 pkgbase="${MINGW_PACKAGE_PREFIX}-${_realname}"
@@ -10,13 +10,17 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/mysql/mysql-server"
 license=('spdx:LGPL-2.1-or-later')
-options=('strip' 'staticlibs')
-makedepends=("git"
+options=('!strip')
+makedepends=("base-devel"
+             "git"
+             "libfido2-devel"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-depends=("${MINGW_PACKAGE_PREFIX}-libevent"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+depends=("libfido2"
+         "${MINGW_PACKAGE_PREFIX}-libevent"
          "${MINGW_PACKAGE_PREFIX}-zlib"
          "${MINGW_PACKAGE_PREFIX}-zstd"
          "${MINGW_PACKAGE_PREFIX}-openssl")
@@ -42,13 +46,16 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
   
-  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+  # MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX="
   "${MINGW_PREFIX}"/bin/cmake -G "MinGW Makefiles" \
-    -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
+    -DCMAKE_INSTALL_PREFIX=${pkgdir}${MINGW_PREFIX} \
+    -DINSTALL_INCLUDEDIR=include/mysql \
     -DCMAKE_PREFIX_PATH=${MINGW_PREFIX} \
     ${extra_config[@]} \
     -DWITHOUT_SERVER=ON \
     -DCMAKE_CXX_STANDARD=20 \
+    -DDEFAULT_CHARSET=utf8mb4 \
+    -DDEFAULT_COLLATION=utf8mb4_general_ci \
     -DWITH_AUTHENTICATION_CLIENT_PLUGINS=OFF \
     -DWITH_UNIT_TESTS=OFF \
     ../mysql-server-mysql-${pkgver}
