--- a/mingw-w64-mysql-client/PKGBUILD
+++ b/mingw-w64-mysql-client/PKGBUILD
@@ -14,6 +14,7 @@ options=('!strip')
 makedepends=("base-devel"
              "git"
              "libfido2-devel"
+             ${MINGW_PACKAGE_PREFIX}-autotools
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
@@ -48,10 +49,14 @@ build() {
   
   # MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX="
   "${MINGW_PREFIX}"/bin/cmake -G "MinGW Makefiles" \
+    ${extra_config[@]} \
     -DCMAKE_INSTALL_PREFIX=${pkgdir}${MINGW_PREFIX} \
     -DINSTALL_INCLUDEDIR=include/mysql \
+    -DINSTALL_MYSQLSHAREDIR=share/mysql \
+    -DINSTALL_DOCDIR=share/doc/mysql \
+    -DINSTALL_INFODIR=share/info \
+    -DINSTALL_MANDIR=share/man \
     -DCMAKE_PREFIX_PATH=${MINGW_PREFIX} \
-    ${extra_config[@]} \
     -DWITHOUT_SERVER=ON \
     -DCMAKE_CXX_STANDARD=20 \
     -DDEFAULT_CHARSET=utf8mb4 \
